# pluck

./: .aider.conf.yml  .dockerignore  .forge.json  .gitignore  .gitlab-ci.yml  .staipler.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: mimir-post-write.sh  mimir-pre-search.sh
.claude/skills/mimir/: antigravity.md  debugging.md  exploring.md  impact-analysis.md  refactoring.md
.claude/skills/mimir/modules/: gh-install-src.md
.forge/: capabilities.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  publish-pypi.yml
.gitnexus/: meta.json
.staipler/: kpi.json  report.html
HomebrewFormula/: pluck-cli.rb
assets/browser-extension/: README.md  background.js  manifest.json
docs/: IMPLEMENTATION.md
man/: gh-install.1  pluck.1
scripts/: install-protocol-handler.sh  pluck-protocol-handler.sh
src/: gh_install.py
tests/: test_gh_install.py
