[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-install"
version = "0.1.0"
description = "Paste GitHub URL, auto-detect install method, auto-install, done!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    {name = "gh-install contributors"}
]
keywords = ["github", "installer", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

[project.scripts]
gh-install = "gh_install:main"

[tool.setuptools]
py-modules = ["gh_install"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_message = "chore(release): v{version} [skip ci]"
