[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pluck-cli"
version = "0.1.0"
description = "Pluck any git repo from any forge — auto-detect, auto-install, done!"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "pluck contributors"}
]
keywords = ["git", "forge", "installer", "cli", "github", "gitlab", "codeberg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

[project.scripts]
pluck = "gh_install:main"
gh-install = "gh_install:main"   # backward-compat alias

[tool.setuptools]
py-modules = ["gh_install"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_message = "chore(release): v{version} [skip ci]"
